[package]
name = "hncat"
version = "0.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-channel = "1.6.1"
chrono = { version = "0.4.19", features = ["serde"] }
fdlimit = "0.2.1"
futures = "0.3.14"
humantime = "2.1.0"
indicatif = "0.16.0"
reqwest = { version = "0.11.3", features = ["json", "brotli", "trust-dns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
