[package]
name = "hackernews-types"
version = "0.1.2"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
description = "Rust types representing items returned from the Hacker News API"
license = "MIT"
repository = "https://github.com/orf/hncat"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }

[dev-dependencies]
matches = "0.1.9"
serde_json = "1.0.82"
