[package]
name = "hncat"
version = "0.1.4-alpha.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
description = "Grab all Hacker News stores + comments, quickly."
license = "MIT"
repository = "https://github.com/orf/hncat"
readme = "../README.md"

[dependencies]
anyhow = "1.0.58"
async-channel = "1.6.1"
chrono = { version = "0.4.19", features = ["serde"] }
fdlimit = "0.2.1"
futures = "0.3.21"
humantime = "2.1.0"
indicatif = "0.16.2"
reqwest = { version = "0.11.11", features = ["json", "brotli", "trust-dns"] }
serde = "1.0.138"
serde_json = "1.0.82"
structopt = "0.3.26"
tokio = { version = "1.19.2", features = ["full"] }

hackernews-types = { version = "^0.1.2", path = "../hackernews-types" }
